--- a/DrawingAppGucci/DrawingApp.xcodeproj/xcshareddata/xcschemes/DrawingApp.xcscheme
+++ b/DrawingAppGucci/DrawingApp.xcodeproj/xcshareddata/xcschemes/DrawingApp.xcscheme
@@ -70,6 +70,18 @@
             ReferencedContainer = "container:DrawingApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocStackLogging"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "PrefersMallocStackLoggingLite"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+      </AdditionalOptions>
       <LocationScenarioReference
          identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
          referenceType = "1">
